<b>2010-04-15</b>

* Bugfix: Flight duration shown as NaN and won't allow saving the flt (2986974)

<b>2010-04-07</b>

* Bugfix: Trip edit/delete broken (2823849)
* Bugfix: DST computed correctly for first day

<b>2010-02-17</b>

* Fixes to SQL schema creation, data loader
* PHP backend revised to use $_GET/POST instead of $HTTP_GET/POST_VARS
* Updated OpenFlights widget documentation

<b>2010-02-08</b>

* Soft launch of OpenFlights widget

<b>2010-01-27</b>

* "Reset" tab added to Facebook app
* Bugfix: Facebook app now requires offline_access, stores session correctly
* Bugfix: Facebook should display distances based on user preferences (2931556)

<b>2010-01-14</b>

* Update and cleanup sql directory
* Remove GAD from distribution

<b>2010-01-13</b>

* Bugfix: Distance/duration display not getting cleared when exiting edit mode
* Bugfix: Facebook app "View map" link broken

<b>2010-01-08</b>

* Clean up GC rendering code a bit
* Bugfix: Loading selected airport actually works now
* Bugfix: Flights rendered by reported distance, not actual distance (2911041)
* Feature: Keep private trips really private (2924818)

<b>2010-01-07</b>

* Add airport search button to airport popups
* Selected airport loaded into search when clicking plane icon
* Allow prev/next through airport query results until user actually initiates a new search
* Cleaner handling of edit/non-edit mode for airport selection
* Unit test cases for PHP helper functions
* Bugfix: Airline editor bugs for user-entered airlines (2921315)

<b>2009-01-06</b>

* Facebook app migrated from template bundles to stream publishing
* Bugfix: Facebook caching buggy (2924046)

<b>2009-12-30</b>

* Assume two-char tabbed quick searches are airlines
* Added favicons for About, Donate, FAQ
* Bugfix: Completely reworked handling of tabs before autocompletion (2921386)
* Bugfix: Do not return airlines after a successful airport match in limit-1 quicksearch (2921386)